src-tauri/out.txt
    Checking p2cord v0.1.0 (D:\_B\p2cord\src-tauri)
warning: unused imports: `DiscordMember` and `DiscordUser`
 --> src\services\social\mod.rs:2:64
  |
2 |     DiscordGuild, DiscordChannel, DiscordMessage, DiscordRole, DiscordMember,
  |                                                                ^^^^^^^^^^^^^
3 |     SimpleGuild, SimpleChannel, SimpleMessage, SimpleRole, SimpleMember,
4 |     MessageSnapshot, SimpleMessageSnapshotData, DiscordUser
  |                                                 ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `AtomicBool` and `Ordering`
 --> src\services\state.rs:1:25
  |
1 | use std::sync::atomic::{AtomicBool, Ordering};
  |                         ^^^^^^^^^^  ^^^^^^^^

warning: unused import: `models::*`
  --> src\services\mod.rs:11:9
   |
11 | pub use models::*;
   |         ^^^^^^^^^

warning: unused import: `state::*`
  --> src\services\mod.rs:12:9
   |
12 | pub use state::*;
   |         ^^^^^^^^

warning: unused import: `Emitter`
  --> src\lib.rs:10:22
   |
10 | use tauri::{Manager, Emitter};
   |                      ^^^^^^^

error[E0599]: no method named `to_rgb8` found for struct `ImageBuffer<image::Rgba<u8>, Vec<u8>>` in the current scope
   --> src\bridge\capture.rs:101:23
    |
101 |                 thumb.to_rgb8().write_to(&mut cursor, image::ImageFormat::Jpeg).map_err(|e| e.to_string())?;
    |                       ^^^^^^^ method not found in `ImageBuffer<image::Rgba<u8>, Vec<u8>>`

error[E0282]: type annotations needed
   --> src\bridge\capture.rs:101:90
    |
101 |                 thumb.to_rgb8().write_to(&mut cursor, image::ImageFormat::Jpeg).map_err(|e| e.to_string())?;
    |                                                                                          ^  - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
101 |                 thumb.to_rgb8().write_to(&mut cursor, image::ImageFormat::Jpeg).map_err(|e: /* Type */| e.to_string())?;
    |                                                                                           ++++++++++++

warning: unused variable: `client`
   --> src\services\social\mod.rs:233:28
    |
233 | pub async fn fetch_members(client: &Client, guild_id: String) -> Result<Vec<SimpleMember>, String> {
    |                            ^^^^^^ help: if this is intentional, prefix it with an underscore: `_client`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `p2cord` (lib) generated 6 warnings
error: could not compile `p2cord` (lib) due to 2 previous errors; 6 warnings emitted
